After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674741 - gdm-fallback.session: shutdown / restart don't work without ConsoleKit
gdm-fallback.session: shutdown / restart don't work without ConsoleKit
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2012-04-24 17:54 UTC by Edward Sheldrake
Modified: 2012-04-30 19:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fallback greeter: shutdown computer via gnome-session (5.29 KB, patch)
2012-04-24 17:54 UTC, Edward Sheldrake
none Details | Review
fallback greeter: use org.freedesktop.login1 to shutdown (6.74 KB, patch)
2012-04-25 10:04 UTC, Edward Sheldrake
committed Details | Review

Description Edward Sheldrake 2012-04-24 17:54:38 UTC
Created attachment 212724 [details] [review]
fallback greeter: shutdown computer via gnome-session

Without ConsoleKit installed, the restart and shutdown menu items in the
classic (gdm-fallback session) GDM greeter don't work. Nothing happens if you try them.

Each attempted restart or shutdown logs to /var/log/messages a line:
gdm-simple-greeter[18870]: CRITICAL: dbus_g_error_get_name: assertion
`error->code == DBUS_GERROR_REMOTE_EXCEPTION' failed

The restart / shutdown code in gui/simple-greeter/gdm-greeter-panel.c appears
to just call the Restart or Stop ConsoleKit dbus method - there's no check if
ConsoleKit is running, nor if gdm was built with ConsoleKit support, nor
anything to shutdown some other way.

I have attached a patch which removes the Restart menu item and makes the Shutdown item open the shutdown dialog (from gnome-session). It was based on what gnome-panel does.
Comment 1 Edward Sheldrake 2012-04-25 10:04:17 UTC
Created attachment 212761 [details] [review]
fallback greeter: use org.freedesktop.login1 to shutdown

Alternative patch, the menu remains the same, not tested yet.
Comment 2 Ray Strode [halfline] 2012-04-25 13:54:45 UTC
great, thanks, will look soon.
Comment 3 Edward Sheldrake 2012-04-26 12:00:31 UTC
I have now tried rebooting with the second patch - it did work, although there was a pause for a minute or two between gdm disappearing and my computer rebooting.
Comment 4 Ray Strode [halfline] 2012-04-30 19:39:25 UTC
Thanks pushed!