greeter: use org.freedesktop.login1 to shutdown

To make the restart and shutdown menu items in the fallback greeter
function without ConsoleKit, try the org.freedesktop.login1.Manager dbus
interface first. If that interface is not present, fallback to ConsoleKit.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=674741